--- a/src/index.css
+++ b/src/index.css
@@ -4,34 +4,41 @@
 
 html,
 body {
-  color: #333;
-  background-color: #fff;
-  font-family: "Microsoft YaHei";
+    color: #333;
+    background-color: #fff;
+    font-family: "Microsoft YaHei";
 }
 html,
 body,
 #root,
 .app {
-  height: 100%;
+    height: 100%;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 
-  /* 参考链接：https://www.jianshu.com/p/04bf173826aa */
-  /* 解决移动端滑动事件优化问题的，在当前项目中，解决 轮播图组件 手动滑动时，报错的问题 */
-  touch-action: pan-y;
+    /* 参考链接：https://www.jianshu.com/p/04bf173826aa */
+    /* 解决移动端滑动事件优化问题的，在当前项目中，解决 轮播图组件 手动滑动时，报错的问题 */
+    touch-action: pan-y;
 }
 
 p,
 h3,
-ul {
-  margin: 0;
+h1,
+ul,
+dd {
+    margin: 0;
 }
 a {
-  color: #333;
+    color: #333;
 }
 
 ul {
-  list-style: none;
+    padding: 0;
+    list-style: none;
+}
+
+.hidden {
+    overflow: hidden;
 }
