--- a/src/pages/Details/index.module.scss
+++ b/src/pages/Details/index.module.scss
@@ -2,25 +2,36 @@
     position: relative;
     padding-bottom: 50px;
     background-color: #f6f5f6;
+}
 
-    .detailHeader {
-        margin-top: 0;
-        background-color: transparent;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        z-index: 1;
+.detailHeader {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    margin-top: 0;
+    background-color: transparent !important;
 
-        :global {
-            .am-navbar-title,
-            .iconfont {
-                color: #fff;
-            }
+    :global {
+        .am-navbar-title,
+        .iconfont {
+            color: #fff;
         }
     }
 }
+
 .slides {
     height: 252px;
+}
+
+.slides :global(a) {
+    display: inline-block;
+    width: 100%;
+    height: 252px;
+}
+.slides :global(img) {
+    width: 100%;
+    height: 252px;
+    vertical-align: top;
 }
 
 .navHeader {
@@ -157,6 +168,10 @@
     padding: 0 10px;
     line-height: 150%;
     background: #fff;
+}
+
+.titleEmpty {
+    padding: 10px 0;
 }
 
 .contact {
